# chaospy

./: .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  CITATIONS.bib  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  Pipfile  README.md  README.rst  asdf  codecov.yml  conftest.py  example2.py  index.html  polychaos.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tasks.rst
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  functionality_request.md  usage_question.md
.github/workflows/: pipe.yml
chaospy/: __init__.py  basis.py  bertran.py  cholesky.py  collocation.py  descriptives.py  example.py  exceptions.py  gauss_patterson.py  genz_keister.py  orthogonal.py  prange.py  quadrature.py  regression.py  saltelli.py  spectral.py  utils.py  version.py
chaospy/bertran/: __init__.py  fourier.py  indices.py  operators.py  sparse.py
chaospy/chol/: __init__.py  bastos_ohagen.py  bastos_ohagen_.py  gill_king.py  gill_murray_wright.py  gill_murray_wright_.py  schnabel_eskow.py  schnabel_eskow_.py
chaospy/cubature/: __init__.py  test_cubature.py
chaospy/descriptives/: __init__.py  conditional.py  covariance.py  expected.py  first.py  higher.py  kurtosis.py  misc.py  percentile.py  quantity_of_interest.py  second1d.py  second2d.py  sensitivity.py  skewness.py  standard_deviation.py  variance.py
chaospy/distributions/: __init__.py  approximation.py  baseclass.py  constructor.py  kde.py
chaospy/expansion/: __init__.py  chebyshev.py  cholesky.py  frontend.py  gegenbauer.py  gram_schmidt.py  hermite.py  jacobi.py  lagrange.py  laguerre.py  legendre.py  stieltjes.py
chaospy/orthogonal/: __init__.py  cholesky.py  frontend.py  gram_schmidt.py  lagrange.py  three_terms_recurrence.py  three_terms_recursion.py
chaospy/poly/: __init__.py  base.py  basis.py  caller.py  collection.py  dimension.py  fraction.py  prange.py  setdim.py  shaping.py  variable.py  wrapper.py
chaospy/quad/: __init__.py  combine.py  frontend.py  generator.py  interface.py  sparse_grid.py
chaospy/quadrature/: __init__.py  chebyshev.py  clenshaw_curtis.py  combine.py  discrete.py  fejer.py  fejer_1.py  fejer_2.py  frontend.py  gauss_kronrod.py  gauss_legendre.py  gauss_lobatto.py  gauss_patterson.py  gauss_radau.py  gaussian.py  gegenbauer.py  genz_keister.py  grid.py  hermite.py  hypercube.py  jacobi.py  kronrod.py  laguerre.py  legendre.py  leja.py  lobatto.py  newton_cotes.py  patterson.py  radau.py  sparse_grid.py  utils.py
chaospy/recurrence/: __init__.py  chebyshev.py  frontend.py  jacobi.py  lanczos.py  stieltjes.py
chaospy/testsuite/: stress_test.py  test_orth.py  test_poly.py
cubature/: README.rst  _cubature.c  _cubature.pxd  _cubature.pyx  cubature.py  setup.py  test_cubature.txt
cubature/cpackage/: ChangeLog  NEWS  README  converged.h  cubature.h  hcubature.c  pcubature.c  vwrapper.h
doc/: Makefile  conf.py  cookbook.rst  descriptives.rst  index.rst  installation.rst  quadrature.rst  requirements.txt  tutorial.rst
doc/distributions/: collection.rst  copulas.rst  custom.rst  dependent.rst  index.rst  introduction.rst  kde.rst  multivariate.rst  sampling.rst
doc/fig/: tutorial_figures.py
doc/polynomials/: baseclass.rst  collection.rst  (+3 more)
docs/: about_us.rst  aboutus.rst  bibliography.bib  conf.py  get_started.rst  index.rst  installation.rst  make.bat  orthogonality.rst  polynomial.rst  quadrature.rst  requirements.txt  tutorials.rst
examples/: intrusive_galerkin.ipynb  monte_carlo_integration.ipynb  point_collocation_method.ipynb  polynomials.ipynb  tutorial.ipynb
poly/: __init__.py  wrapper.py
tests/: conftest.py  stress_test.py  test_dist.py  test_intrusive_galerkin.py  test_lagrange_polynomials.py  test_monte_carlo_integration.py  test_orth.py  test_orthogonal_expansion.py  test_pdf.py  test_point_collocation.py  test_poly.py  test_pseudo_spectral_projection.py  test_regression_models.py  test_stress.py
tutorial/: Heaviside.py  README.md  README.rst  example_implementations.py  example_introduction.ipynb  example_rosenblatt.py  flow_in_serial_layers.py  intrusive_galerkin.ipynb  low_discrepancy_monte_carlo.ipynb  point_collocation.ipynb  polynomial_behavior.ipynb  pseudo_spectral_projection.ipynb  scikitlearn_regression.ipynb
(+804 files in other folders)
