[metadata]
version = 0.1.0
name = chaospy
description = "Numerical tool for perfroming uncertainty quantification"
long_description = file: README.rst, CHANGELOG.rst LICENSE.txt
long_description_content_type = text/x-rst
license = MIT
author = Jonathan Feinberg
author_email = jonathf@gmail.com
url = https://github.com/jonathf/chaospy/

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Mathematics
    License :: OSI Approved :: MIT License
    Natural Language :: English

[options]
packages = find:
install_requires =
  numpy
  scipy
  numpoly
python_requires = >=3.7
zip_safe = True
